[package]
name = "sickle_math"
version = "0.2.3"
edition = "2021"
description = "Math dependencies for sickle_ui"
keywords = ["sickle_ui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UmbraLuminosa/sickle_ui"

[dependencies]
bevy_color = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy"}
bevy_ui = { git = "https://github.com/bevyengine/bevy" }
serde = { version = "1.0", features = ["derive"] }
